# ime-switch

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  rust.yml
src/: main.rs
