[package]
name = "ime-select"
version = "0.1.3"
edition = "2024"

[dependencies]
# v0.60.0 규격에 맞춤
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
] }

# 빌드 시 리소스를 생성하기 위한 도구 추가
[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"     # 크기 최적화 (로딩 속도 향상)
lto = true          # 링크 시간 최적화
codegen-units = 1
panic = "abort"
strip = true        # 디버그 정보 제거 (필수)
